--- a/final-project-fe/Pages/Index.cshtml
+++ b/final-project-fe/Pages/Index.cshtml
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-	@* <h2>Danh sách bình luận</h2>
+	 <h2>Danh sách bình luận</h2>
 
 	@if (Model.Comments != null && Model.Comments.Items.Any())
 	{
@@ -42,7 +42,7 @@
 	else
 	{
 		<p>Không có bình luận nào.</p>
-	} *@
+	} 
 	<!--<div class="se-pre-con"></div>-->
 	<div class="theme-layout">	
 		<section>
