--- a/final-project-fe/Pages/Shared/_Layout.cshtml
+++ b/final-project-fe/Pages/Shared/_Layout.cshtml
@@ -15,6 +15,12 @@
 	<link rel="stylesheet" href="css/color.css">
 	<link rel="stylesheet" href="css/responsive.css">
     @* <link rel="stylesheet" href="~/final_project_fe.styles.css" asp-append-version="true" /> *@
+	<style>
+		ul, ol {
+			list-style: none;
+			padding-left: 0;
+		}
+	</style>
 </head>
 <body>
 @*     <header>
